--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
   padding: 30px;
   text-align: center;
   font-size: 1.4em;
-  background-color: #8B1F41;
+  background-color: #B81302;
   color: white;
 }
 
@@ -45,7 +45,7 @@ nav li {
 
 aside {
   padding: 20px;
-  background-color: #75787B;
+  background-color: #FEF700;
   color: white;
 }
 
@@ -58,7 +58,7 @@ footer {
   padding: 30px;
   text-align: center;
   font-size: 1.4em;
-  background-color: #8B1F41;
+  background-color: #B81302;
   color: white;
 }
 
