--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ main {
 }
 
 nav {
-  background-color: #E87722;
+  background-color:  #FEF700;
   padding: 20px;
 
 }
@@ -46,7 +46,7 @@ nav li {
 aside {
   padding: 20px;
   background-color: #FEF700;
-  color: white;
+  color: black;
 }
 
 figcaption {
