Added spaces in sources and sentences

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: arial;
+  font-family: 'Hepta Slab', serif;
 }
 
 .container {
@@ -47,6 +47,7 @@ aside {
   padding: 20px;
   background-color: #FEF700;
   color: black;
+    https://www.youtube.com/watch?v=-62Ay0uH__o
 }
 
 figcaption {
